# gamma-astro-data-formats

./: .buildinfo  .gitignore  .travis.yml  CONTRIBUTING.md  Makefile  README.md  about.html  genindex.html  index.html  make.bat  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml
_downloads/01aa12113937ca99cc5f76678cb12268/: flux_points.ecsv
_downloads/268ac9e4d794763b33f3d6f77f3ca213/: binlike.fits
_downloads/334d16a808f2844d0d9a4ec7df296264/: rad_max_2d_point-like_example.fits
_downloads/38bfa3f160d6905f5bc5964897628d58/: hpx_cmap_explicit.fits
_downloads/42825d2cf766badfe15ffbe0bbc47d92/: hpx_ccube_sparse0.fits
_downloads/4e0cd6e7d5726316b6b36f5d6f911b17/: binlike.h5
_downloads/836697a774781ed922f3b33b971e57f9/: flux_points.h5
_downloads/a5481c16f25b4bbf4911e6515ecfe0af/: bkg_3d_full_example.fits
_downloads/c0352b1d41411ef2b16faa035fd6fb3d/: 1es0229_hess_spectrum.ecsv
_downloads/c20feae1d5420f985bba2670e12d5481/: bkg_2d_full_example.fits
_sources/: about.rst.txt  index.rst.txt
_static/: documentation_options.js
data_storage/: index.html
events/: events.html  gti.html  index.html  pointing.html
general/: coordinates.html  fits-arrays.html  glossary.html  hduclass.html  index.html  notes.html  time.html
irfs/: index.html
lightcurves/: index.html
psf-histo-offset-energy/: README.md
skymaps/: index.html
skymaps/wcs/: index.html
source/: about.rst  conf.py  index.rst  references.txt
spatial-spectral-model/: spatial-spectral-model.md  spatial_models.yaml  spectral_models.yaml
spectra/: index.html
(+186 files in other folders)
