[tool.poetry]
name = "gamma-astro-data-formats"
version = "0.3.0.a0"
description = "Standardized Data Formats for Gamma-Ray Astronomy"
authors = ["Christoph Deil et al."]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.4"
sphinx_rtd_theme = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
