[tool.poetry]
name = "gamma-astro-data-formats"
version = "0.3.0.a0"
description = "Standardized Data Formats for Gamma-Ray Astronomy"
authors = ["Christoph Deil et al."]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
sphinx = "^4.0"
sphinx_rtd_theme = "^1.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
